# sentiment

./: nrclex.py  pyproject.toml  setup.py
